<resources>
    <string name="app_name">Music Player</string>
    <string name="welcome">Welcome!</string>
    <string name="choose_music_source">Choose music source</string>
    <string name="local_storage">Local storage</string>
    <string name="mpd_server">MPD server (not finished)</string>
    <string name="seek_backward">Seek backward</string>
    <string name="play_or_pause_song">Play or pause song</string>
    <string name="seek_forward">Seek forward</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="music">Music</string>

    <string name="music_directory">Music directory</string>
    <string name="server_ip">IP address</string>
    <string name="other">Other</string>
    <string name="disable_background_service">Disable background service</string>
    <string name="server_port">Port</string>
    <string name="directory_does_not_exist">Directory does not exist!</string>
    <string name="playback_error">Playback error</string>
    <string name="directory_scan_depth">Directory scan depth</string>
    <string name="cannot_play_song">Cannot play song!</string>
    <string name="hide_seek_buttons">Hide seek buttons</string>

    <string name="channel_name">MusicControl Player</string>
    <string name="channel_description">MusicControl Player Notification Channel</string>
    <string name="created_by">Created by</string>
    <string name="author_name">Kacper Zybała</string>
    <string name="next_song_autoplay">Next song autoplay</string>
    <string name="play">Play</string>
</resources>
